---------------------------------------------------------------------------------------------------
Version: 1.0.13
Date: 29/6/25
  Bugfixes:
    - Fixed that hex core deletion was possible pre-unlock.
    - Fixed that the last free claim you have wasn't free.
  Changes:
    - Moved circuit connection point of hex cores.
---------------------------------------------------------------------------------------------------
Version: 1.0.12
Date: 29/6/25
  Bugfixes:
    - Hotfix for new games starting without coins in your inventory. (preventing being able to play the game at all)
---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: 29/6/25
  Bugfixes:
    - Fixed that the quest "It Wasn't Good Enough" wasn't able to be completed.
    - Fixed that opening a hex core in editor mode would crash the game.
    - Fixed that the Lazy Looter quest was only able to be completed when you were not in remote view on the dungeon's planet.
    - Fixed that some Nauvis hexes were deformed by vanilla water generation.
---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 27/6/25
  Translation:
    - Added Russian translations. (courtesy Shadow_Man)
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 26/6/25
  Modding:
    - Flagged Bob's Warfare mod as incompatible.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 25/6/25
  Bugfixes:
    - Fixed a crash related to several features involving hex cores.
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 25/6/25
  Modding:
    - Added support for mods that accidentally clear items from other mods' list boxes.
      Current known mod that does this: RPG