@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.13
 Date: 29/6/25
+  Minor Features:
+    - Added search button in the catalog.
   Bugfixes:
     - Fixed that hex core deletion was possible pre-unlock.
     - Fixed that the last free claim you have wasn't free.
